[package]
name = "mvdb"
version = "0.2.0"
authors = ["James Munns <james.munns@gmail.com>"]
license = "MIT"
repository = "https://github.com/jamesmunns/mvdb-rs"
description = "Minimum Viable (Psuedo) Database"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
error-chain = "0.10"

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.toml]
version = "0.4"
optional = true

[features]
use-toml = ["toml"]
use-json = ["serde_json"]
default = ["use-json"]
