[package]
name = "mvdb"
version = "0.2.1"
authors = ["James Munns <james.munns@gmail.com>"]
license = "MIT"
repository = "https://github.com/jamesmunns/mvdb-rs"
description = "Minimum Viable (Psuedo) Database"

[dependencies]
serde = "1.0"
error-chain = "0.10"
serde_json = "1.0"

[dev-dependencies]
serde_derive = "1.0"